stopping input fields from jumping around on submit

--- a/peoples-purse/src/app/information/information.component.css
+++ b/peoples-purse/src/app/information/information.component.css
@@ -19,11 +19,13 @@ a {
 }
 
 #deptSelect {
+    margin: 5px;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     justify-content: center;
     align-items: center;
-    position: relative;
-    margin: 5px;
+    flex-direction: column;
+    display: flex;
+    margin: auto;
     height: 35px;
 }
 
@@ -39,6 +41,9 @@ button {
     text-align: center;
     transition: all 0.2s ease-in-out;
     line-height: 24px;
+    flex-direction: column;
+    display: flex;
+    margin: auto;
 }
 
 button:hover {
@@ -57,11 +62,15 @@ input {
 }
 
 #address {
+    margin: 5px;
+    all: unset;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
     justify-content: center;
     align-items: center;
-    position: relative;
-    margin: 5px;
+    flex-direction: column;
+    display: flex;
+    margin: auto;
     height: 35px;
     width: 35vh;
+    
 }
